--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,16 @@
   color: #09d3ac;
 }
 
+@media (max-width: 626px) {
+  .flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  .border {
+    width: 100%;
+  }
+}
+
 .border {
   width: 50%;
 }
