--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,10 @@
   color: #09d3ac;
 }
 
+.flex {
+  box-shadow: 0.3rem 0.7rem 1rem rgba(0, 0, 0, 0.1);
+}
+
 @media (max-width: 626px) {
   .flex {
     flex-direction: column;
